--- a/mywebapp.html
+++ b/mywebapp.html
@@ -1,3 +1,4 @@
 <h1>This is mywebapp.html version 1 </h1>
 <h2> version 1 ist commit </h2>
-
+<h2> version 1 is updated to Version 2 </h2>
+<h3> git diff -staged head check </h3>
